# pm-get-rich

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture_polymarket_rust.md  book_fill_model.md  convoy5_honest_assessment.md  cost_model.md  edge_assessment.md  pyproject.toml  recommendation.md
.runtime/: session_id
data/: backtest_results.parquet
data/backtest/: l2_comparison.md  l2_fill_results.parquet  volume_baseline_results.parquet
data/signals/: signals.parquet
nautilus_strategies/: README.md  RESULTS.md  polymarket_weather_tpp_vs_volume.py  tpp_signal.py  volume_baseline.py
scripts/: backtest_drift_windows.py  backtest_l2_fills.py  backtest_multivariate.py  backtest_signals.py  backtest_volume_baseline.py  backtest_whales.py  batch_hawkes.py  build_hf_coverage_data.py  compare_tpp_volume.py  deploy_viz.sh  download_data.py  download_pmxt_hours.py  eval_holdout.py  evaluate_backtest.py  export_comparison.py  export_generalization.py  export_parquet.py  export_tpp_onnx.py  fit_cross_market_neural.py  fit_hawkes_classical.py  fit_hawkes_neural.py  generate_signals.py  generate_signals_v2.py  generate_summary.py  normalize_events.py  parallel_classical.py  parallel_neural.py  run_backtest.py  sanity_check_events.py  scan_signals.py  scan_whales.py  viz_whale_backtest.py
src/: config.py
src/costs/: __init__.py  book_fills.py  fees.py  fills.py
src/evaluate/: __init__.py  backtest.py  (+2 more)
tests/: test_book_fills.py
viz/: Dockerfile  assumptions.html  backtest.html  baseline.html  comparison.html  coverage.html  eval.html  fly.toml  generalization.html  index.html  nginx.conf  pmxt.html  realistic-fill.html
(+40 files in other folders)
