[project]
name = "pmgetrich"
version = "0.1.0"
description = "Chronos 2 time series forecasting on Polymarket prediction market data"
requires-python = ">=3.11"
dependencies = [
    "chronos-forecasting",
    "pandas",
    "polars",
    "duckdb",
    "pydantic-settings",
    "huggingface-hub",
    "httpx",
    "pytz>=2026.1.post1",
    "matplotlib",
    "pyarrow>=23.0.1",
]

[project.scripts]
download-data = "scripts.download_data:main"
run-backtest = "scripts.run_backtest:main"
scan-signals = "scripts.scan_signals:main"
scan-whales = "scripts.scan_whales:main"
backtest-whales = "scripts.backtest_whales:main"
viz-whale-backtest = "scripts.viz_whale_backtest:main"
normalize-events = "scripts.normalize_events:main"
sanity-check-events = "scripts.sanity_check_events:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
